[package]
name = "pi_server"
version = "0.1.0"
authors = ["DavidCosbyUofU <70235806+DavidCosbyUofU@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.4.2"
slc = { git = "https://github.com/DavidCosbyUofU/slc" }
networking = {path = "../networking"}
